[package]
name = "tailscale-ip-translate"
version = "1.0.1"
edition = "2024"
description = "Translates IPv4 addresses to Tailscale 4to6 subnet addresses"
repository = "https://github.com/freeone3000/tailscale-ip-translate"
homepage = "https://github.com/freeone3000/tailscale-ip-translate"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
